@@ -1,0 +1,18 @@
+
+include $(top_srcdir)/Makefile.tool-tests.am
+
+dist_noinst_SCRIPTS = filter_stderr
+
+
+EXTRA_DIST = \
+	bug484935.stderr.exp bug484935.vgtest
+
+check_PROGRAMS = \
+	bug484935
+
+
+AM_CFLAGS    += @FLAG_M64@
+AM_CXXFLAGS  += @FLAG_M64@
+AM_CCASFLAGS += @FLAG_M64@
+
+
