@@ -1,0 +1,3 @@
+#! /bin/sh
+
+../filter_stderr "$@"
